--- a/bookmark_three.html
+++ b/bookmark_three.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/components/buttons.css" />
+    <link rel="stylesheet" href="/components/card.css" />
+    <link rel="stylesheet" href="/components/header.css" />
+    <link rel="stylesheet" href="/components/navigation.css" />
+    <link rel="stylesheet" href="/components/profile.css" />
+    
     <title>Document</title>
   </head>
   <body>
