--- a/bookmark_two.html
+++ b/bookmark_two.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
+    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/components/buttons.css" />
+    <link rel="stylesheet" href="/components/card.css" />
+    <link rel="stylesheet" href="/components/header.css" />
+    <link rel="stylesheet" href="/components/navigation.css" />
+    <link rel="stylesheet" href="/components/profile.css" />
   </head>
   <body>
     <header class="header">
