--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/components/header.css" />
     <link rel="stylesheet" href="/components/navigation.css" />
     <link rel="stylesheet" href="/components/profile.css" />
+    <link rel="stylesheet" href="/newQuestion.css" />
 
     <title>Document</title>
   </head>
@@ -43,6 +44,7 @@
       <nav class="navigation"/>
       <a aria-label="Home" href="index.html">Home</a>
       <a aria-label="To Bookmark" href="bookmark.html">Bookmark</a>
+      <a aria-label="new card" href="/newQuestion.html">New Question</a>
       <a aria-label="To Profile" href="profile.html">Profile</a>
       </nav>
       
